syntax = "proto3";

package com.github.h3nrique.postalcode.proto;

option java_package = "com.github.h3nrique.postalcode.proto";

enum PostalCodeStatus {
  UNKNOWN = 0;
  CREATED = 1;
  NOT_FOUND = 2;
  FOUND = 3;
}

message Generator {
  string country_name = 1;
  string begin_range_postal_code = 2;
  string end_range_postal_code = 3;
}