syntax = "proto3";

package com.github.h3nrique.postalcode.proto;

import "domain/common.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_package = "com.github.h3nrique.postalcode.proto";

message PostalCodeState {
  string code = 1;
  PostalCodeStatus status = 2;
  string country = 3;
  string street = 4;
  string state = 5;
  string city = 6;
}

message CreateRequest {
  string postalCode = 1;
}

service PostalCode {
  rpc OnCreate(CreateRequest) returns (PostalCodeState);
  rpc Get(google.protobuf.Empty) returns (PostalCodeState) {
    option (google.api.http) = {
      get: "/v1/postalcode/{postalCode}"
    };
  }
}

service PostalCodeGenerator {
  rpc Generate(Generator) returns (google.protobuf.Empty);
  rpc Create(CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/postalcode/{postalCode}",
      body: "*"
    };
  }
}